# GPTeam

./: .env.example  .flake8  .gitignore  DISCORD.md  LICENSE  README.md  config copy.json  config.json  config.py  metaconfig.json  pyproject.toml  railway.json  setup.py
.github/workflows/: test_setup_script.yml
101_ai/: __init__.py  alex.py  cli.py  cord.py  discord_utils.py  fixie.py  game.py  memory_test.py  parameters.py  register.py
101_ai/agents/: base.py  task_definition.py
101_ai/memory/: agent.py  embeddings.py
101_ai/parsers/: task_definition_parser.py
101_ai/prompts/: task_definition.py
101_ai/tools/: __init__.py  built_in.py  evaluate_code.py  evaluate_spec.py  improve_code.py  llm_function.py  llm_function_tool.py  main.py  missing_information.py  search.py  toolbox.py  user_input.py
101_ai/utils/: cache.py  chat.py  formatting.py  models.py
101_ai/utils/prompts/: task_definition.py  task_specification.py
agents/: Marty.txt  Rebecca.txt
src/: __init__.py  create_stuff.py  main.py  testing.py
src/agent/: base.py  executor.py  importance.py  message.py  plans.py  react.py  reflection.py
src/context/: base.py  data.py  manager.py
src/event/: base.py
src/location/: base.py
src/logs/: 14-42__04-15-23_logs.json  14-43__04-15-23_logs.json  14-44__04-15-23_logs.json  15-04__04-15-23_logs.json  15-06__04-15-23_logs.json  15-10__04-15-23_logs.json  15-11__04-15-23_logs.json  15-13__04-15-23_logs.json  15-37__04-16-23_logs.json  15-55__04-15-23_logs.json  16-13__04-15-23_logs.json  16-22__04-16-23_logs.json  16-40__04-16-23_logs.json  16-41__04-16-23_logs.json  16-42__04-16-23_logs.json  16-45__04-16-23_logs.json  16-46__04-16-23_logs.json  16-49__04-16-23_logs.json  17-50__04-16-23_logs.json  18-01__04-16-23_logs.json  18-11__04-16-23_logs.json
src/memory/: base.py
src/templates/: logs.html
src/tools/: __init__.py  base.py  built_in.py  company_directory.py  context.py  directory.py  document.py  human.py  llm_function_tool.py  name.py  search.py  send_message.py  user_input.py  wait.py
src/utils/: cache.py  colors.py  config.py  database.py  discord.py  embeddings.py  formatting.py  general.py  input.py  logging.py  model_name.py  models.py  my_logging.py  parameters.py  prompt.py  spinner.py  supabase_client.py  windowai_model.py
src/utils/database/: base.py  (+7 more)
src/web/: __init__.py
src/world/: base.py  context.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20230416211051_initial_schema.sql
(+2 files in other folders)
