[tool.poetry]
name = "101-ai"
version = "0.1.0"
description = ""
authors = ["Alex Velikanov <alex25368@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
start = "src:run"
cli = "src.cli:main"
test = "src.testing:main"

[tool.poetry.dependencies]
python = "^3.11"
quart = {extras = ["dotenv"], version = "^0.18.3"}
colorama = "^0.4.6"
langchain = "^0.0.143"
python-dotenv = "^1.0.0"
openai = "^0.27.4"
google-search-results = "^2.4.2"
black = "^23.3.0"
json-log-formatter = "^0.5.2"
supabase = "^1.0.3"
wolframalpha = "^5.0.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
