[tool.poetry]
name = "101-ai"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
start = "src:run"
world = "src.main:main"
db-seed = "src.utils.database.seed:main"
db-seed-small = "src.utils.database.seed:main_small"

[tool.poetry.dependencies]
python = ">=3.11"
quart = {extras = ["dotenv"], version = "^0.18.3"}
colorama = "^0.4.6"
python-dotenv = "^1.0.0"
openai = "^0.27.4"
google-search-results = "^2.4.2"
black = "^23.3.0"
json-log-formatter = "^0.5.2"
supabase = "^1.0.3"
wolframalpha = "^5.0.0"
langchain = "^0.0.144"
pytz = "^2023.3"
google-api-python-client = "^2.86.0"
hikari = "^2.0.0.dev118"
postgrest-py = "^0.10.6"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
