[tool.poetry]
name = "101-ai"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "src"}, {include = "web", from = "src"}]

[tool.poetry.scripts]
world = "src.main:main"
db-seed = "src.utils.database.seed:main"
db-seed-small = "src.utils.database.seed:main_small"
db-reset = "src.utils.database.reset:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
colorama = "^0.4.6"
python-dotenv = "^1.0.0"
openai = "^0.27.4"
google-search-results = "^2.4.2"
black = "^23.3.0"
supabase = "^1.0.3"
wolframalpha = "^5.0.0"
langchain = "^0.0.144"
pytz = "^2023.3"
hikari = "^2.0.0.dev118"
postgrest-py = "^0.10.6"
aiosqlite = "^0.19.0"
hyperdb-python = "^0.1.3"
quart = "^0.18.4"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
